--- a/templates/user_management/change_password.html
+++ b/templates/user_management/change_password.html
@@ -22,7 +22,7 @@
                     </p>
                     
                     <form method="POST" novalidate>
-                        {{ form.hidden_tag() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         
                         <div class="mb-3">
                             {{ form.current_password.label(class="form-label") }}
