--- a/templates/user_management/delete_profile.html
+++ b/templates/user_management/delete_profile.html
@@ -58,7 +58,7 @@
                     </div>
 
                     <form method="POST" novalidate id="deleteForm">
-                        {{ form.hidden_tag() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         
                         <div class="mb-3">
                             {{ form.confirmation.label(class="form-label fw-bold") }}
