--- a/templates/user_management/login.html
+++ b/templates/user_management/login.html
@@ -22,7 +22,7 @@
                     </p>
 
                     <form method="POST" novalidate>
-                        {{ form.hidden_tag() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         
                         <!-- Username or Email Field -->
                         <div class="mb-3">
