--- a/templates/gdpr/data_rectification.html
+++ b/templates/gdpr/data_rectification.html
@@ -27,7 +27,7 @@
                     </div>
 
                     <form method="POST">
-                        {{ form.hidden_tag() }}
+                        <input type="hidden" name="csrf_token" value="{{ csrf_token() }}">
                         
                         <div class="row">
                             <div class="col-md-6">
