--- a/admin/templates/base_admin.html
+++ b/admin/templates/base_admin.html
@@ -79,7 +79,7 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ url_for('admin.health_dashboard') }}">
-                                <i class="bi bi-heart-pulse"></i> System Health
+                                <i class="bi bi-activity"></i> System Management
                             </a>
                         </li>
                         <li class="nav-item">
